--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,9 @@
 /* your code */
+thead{
+	background-color:skyblue;
+	border:4px;
+}
+table, th, td {
+  border: 1px solid black;
+	border-collapse: collapse;
+}
